[tool.poetry]
name = "composearch"
version = "0.1.0"
description = ""
authors = ["Petar Enev <enev@engineer.bg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
bs4 = "^0.0.1"
requests = "^2.30.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
asgiref = "^3.6.0"
brotli = "^1.0.9"
djongo = "^1.3.6"
urllib3 = "1.26.15"
pymongo = {extras = ["srv"], version = "3.13.0"}
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
