[tool.poetry]
name = "composearch"
version = "0.1.0"
description = "Composearch is a price comparison web app that combines the functionalities of a web scraper and a meta search engine"
authors = ["Petar Enev <enev@engineer.bg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
bs4 = "^0.0.1"
requests = "^2.31.0"
asyncio = "^3.4.3"
asgiref = "^3.7.2"
urllib3 = "1.26.15"
python-decouple = "^3.8"
playwright = "^1.34.0"
psycopg = {extras = ["binary"], version = "^3.1.9"}
redis = "^4.5.5"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
